--- a/app/client/style.css
+++ b/app/client/style.css
@@ -19,7 +19,10 @@ body {
   font-weight: 400;
   font-size: large;
   color: #000000;
-  background-color: #ffffff;
+}
+
+.gradient {
+  background: linear-gradient(to right, rgb(255, 255, 255, 0.5) 50%, rgb(135, 205, 250, 0.5), rgb(0, 0, 128, 0.5), rgb(246, 80, 38, 0.5), rgb(242, 133, 0, 0.5), rgb(83, 0, 83, 0.5), rgb(152, 41, 133, 0.5));
 }
 
 /* Set the SignIn and SignUp alerts background. */
