--- a/app/client/style.css
+++ b/app/client/style.css
@@ -25,6 +25,11 @@ body {
   background: linear-gradient(to right, rgb(255, 255, 255, 0.5) 50%, rgb(135, 205, 250, 0.5), rgb(0, 0, 128, 0.5), rgb(246, 80, 38, 0.5), rgb(242, 133, 0, 0.5), rgb(83, 0, 83, 0.5), rgb(152, 41, 133, 0.5));
 }
 
+.nav-tabs {
+  margin-top: 35px;
+  margin-left: 30px;
+}
+
 /* Set the SignIn and SignUp alerts background. */
 #signin-page .alert-light, #signup-page .alert-light {
   --bs-alert-bg: var(--matr-navbar-bg);
