--- a/app/client/style.css
+++ b/app/client/style.css
@@ -14,6 +14,7 @@ body {
   color: #000000;
 }
 
+/* Navbar styling */
 .basic-nav {
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -22,15 +23,23 @@ body {
   color: #000000;
 }
 
-/* Color gradient, possible inclusion
-.gradient-colors {
-  background: linear-gradient(to right, rgb(255, 255, 255, 0.2) 50%, rgb(135, 205, 250, 0.2), rgb(0, 0, 128, 0.2), rgb(246, 80, 38, 0.2), rgb(242, 133, 0, 0.2), rgb(83, 0, 83, 0.2), rgb(152, 41, 133, 0.2));
-} */
+.basic-nav.shrink {
+  transition: height 0.3s ease;
+}
+
+.basic-nav img.shrink {
+  transition: wdith 0.3s ease, height 0.3s ease;
+}
 
 .nav-tabs {
   margin-top: 35px;
   margin-left: 30px;
 }
+
+/* Color gradient, possible inclusion
+.gradient-colors {
+  background: linear-gradient(to right, rgb(255, 255, 255, 0.2) 50%, rgb(135, 205, 250, 0.2), rgb(0, 0, 128, 0.2), rgb(246, 80, 38, 0.2), rgb(242, 133, 0, 0.2), rgb(83, 0, 83, 0.2), rgb(152, 41, 133, 0.2));
+} */
 
 /* Set the SignIn and SignUp alerts background. */
 #signin-page .alert-light, #signup-page .alert-light {
