css comment updated

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -36,7 +36,7 @@ body {
   margin-left: 30px;
 }
 
-/* Color gradient, possible inclusion
+/* Color gradient, could be for footer
 .gradient-colors {
   background: linear-gradient(to right, rgb(255, 255, 255, 0.2) 50%, rgb(135, 205, 250, 0.2), rgb(0, 0, 128, 0.2), rgb(246, 80, 38, 0.2), rgb(242, 133, 0, 0.2), rgb(83, 0, 83, 0.2), rgb(152, 41, 133, 0.2));
 } */
