--- a/app/client/style.css
+++ b/app/client/style.css
@@ -34,6 +34,22 @@ html, body {
   margin-left: 30px;
 }
 
+.logo-navbar {
+  margin-top: 8px;
+  margin-bottom: 20px;
+  margin-right: 10px;
+  width: 200px;
+  height: 85px;
+}
+
+.logo-footer {
+  margin-top: 8px;
+  margin-bottom: 20px;
+  margin-right: 10px;
+  width: 165px;
+  height: 75px;
+}
+
 .footer-style {
   position: relative;
 }
