--- a/app/client/style.css
+++ b/app/client/style.css
@@ -27,17 +27,54 @@ body {
   padding-bottom: 20px;
 }
 
-/* styling for horizontal dividers on Landing */
-hr.gradient {
+/* styling for Landing page */
+.full-width {
+  width: 100vw;
+  margin-left: calc(-1 * var(--bs-gutter-x) * 0.5);
+  margin-right: calc(-1 * var(--bs-gutter-x) * 0.5);
+  position: relative;
+}
+
+#landing .top-img {
+  /*noinspection CssUnknownTarget*/
+  background-image: url("images/landing.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  padding-top: 20%;
+  position: relative;
+  top: -1.5rem;
+}
+
+/* CSS for animated text */
+.anim-text {
+  border-right: 5px solid;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  animation:
+    typing 6s,
+    cursor .4s step-end infinite alternate;
+}
+
+@keyframes cursor {
+  50% {border-color: transparent}
+}
+
+@keyframes typing {
+  from {width: 0}
+}
+
+#landing hr {
   height: 3px;
-  width: 10%;
+  width: 15%;
   border: none;
   border-radius: 6px;
   background: linear-gradient(
-      90deg,
-      rgba(81,123, 190, 1) 0%,
-      rgba(241, 114, 25, 1) 25%,
-      rgba(126, 22, 84, 1) 75%,
-      rgba(81, 72, 153, 1) 100%
-  );
+      to right, rgba(81,123, 190, 1),
+      rgba(241, 114, 25, 1),
+      rgba(126, 22, 84, 1),
+      rgba(81, 72, 153, 1)
+  )
 }
