--- a/app/client/style.css
+++ b/app/client/style.css
@@ -72,9 +72,20 @@ body {
   border: none;
   border-radius: 6px;
   background: linear-gradient(
-      to right, rgba(81,123, 190, 1),
+      to right,
+      rgba(81,123, 190, 1),
       rgba(241, 114, 25, 1),
       rgba(126, 22, 84, 1),
       rgba(81, 72, 153, 1)
   )
+}
+
+#landing .btn {
+  border-radius: 25px;
+  border: none;
+  background-color: rgba(126, 22, 84, 1);
+}
+#landing .btn:hover {
+  border-radius: 25px;
+  background-color: rgba(126, 22, 84, 0.9);
 }
