--- a/app/client/style.css
+++ b/app/client/style.css
@@ -28,13 +28,6 @@ body {
 }
 
 /* styling for Landing page */
-.full-width {
-  width: 100vw;
-  margin-left: calc(-1 * var(--bs-gutter-x) * 0.5);
-  margin-right: calc(-1 * var(--bs-gutter-x) * 0.5);
-  position: relative;
-}
-
 #landing .top-img {
   /*noinspection CssUnknownTarget*/
   background-image: url("images/landing.jpg");
@@ -47,7 +40,7 @@ body {
   top: -1.5rem;
 }
 
-/* CSS for animated text */
+/* CSS for animated text on landing page */
 .anim-text {
   border-right: 5px solid;
   width: 100%;
@@ -67,8 +60,9 @@ body {
 }
 
 #landing hr {
-  height: 3px;
-  width: 15%;
+  margin: 2rem 0;
+  height: 2px;
+  width: 50%;
   border: none;
   border-radius: 6px;
   background: linear-gradient(
