--- a/app/client/style.css
+++ b/app/client/style.css
@@ -44,17 +44,21 @@ html, body {
 }
 
 .logo-footer {
-  margin-top: 8px;
-  margin-bottom: 20px;
-  margin-right: 10px;
+  margin-top: 7px;
+  margin-bottom: 19px;
+  margin-right: 9px;
   width: 165px;
   height: 75px;
 }
 
+.footer-spacing {
+  padding-bottom: 7px;
+}
+
 /*footer padding specifications to fill space */
 .div-style {
-  padding-top: 25px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
 
 .text-style {
